@@ -334,3 +334,4 @@ v1.5.5 (latest)
 ======
 - Added vim to ssh image/s
 - Drupal9 image cleanup
+- Updated composer md5 in drupal8/9
